--- a/resource/TwitchXP.rc
+++ b/resource/TwitchXP.rc
@@ -13,12 +13,13 @@ IDI_ICN ICON "TwitchXP.ico"
 1 24 "Manifest.xml"
 
 #define R_CAPTION "TwitchXP"
-#define R_VERSION "1.7"
+#define R_VERSION "1.8"
 #define R_INTNAME "TwitchXP"
+#define R_COPYEAR "\xA9 SysTools 2018-2023"
 
 1 VERSIONINFO
-FILEVERSION 1,7,0,0
-PRODUCTVERSION 1,7,0,0
+FILEVERSION 1,8,0,0
+PRODUCTVERSION 1,8,0,0
 FILETYPE 1
 BEGIN
   BLOCK "StringFileInfo"
@@ -28,7 +29,7 @@ BEGIN
       VALUE "CompanyName", "SysTools"
       VALUE "FileDescription", R_CAPTION
       VALUE "FileVersion", R_VERSION
-      VALUE "LegalCopyright", "\xA9 SysTools 2018-2023"
+      VALUE "LegalCopyright", R_COPYEAR
       VALUE "OriginalFilename", R_INTNAME ".exe"
       VALUE "InternalName", R_INTNAME
       VALUE "ProductName", R_CAPTION
@@ -60,8 +61,10 @@ BEGIN
   PUSHBUTTON      "Browse...", IDC_PL_BRWS, 197, 77, 55, 14
   AUTOCHECKBOX    "Hide player console window (for ffplay, mplayer, etc.)", IDC_PL_HIDE, 7, 97, 181, 8
   PUSHBUTTON      "Exit", IDCANCEL, 197, 97, 55, 14
-  LTEXT           "\xA9 SysTools 2018-2023 | http://systools.losthost.org/?misc", IDC_SITELNK, 7, 117, 184, 8, SS_OWNERDRAW | SS_NOTIFY
-  LTEXT           "Custom software development for your business or personal usage.\nContact for more details.", IDC_STATIC, 7, 127, 210, 17
+  EDITTEXT        IDC_LOGINFO, 7, 117, 245, 30, WS_VSCROLL | ES_AUTOVSCROLL | ES_MULTILINE | ES_READONLY
+  LTEXT           R_COPYEAR " | http://systools.losthost.org/?misc", IDC_SITELNK, 7, 117, 184, 8, SS_OWNERDRAW | SS_NOTIFY
+  LTEXT           "Custom software development for your business or personal usage.\n"\
+                  "Contact for more details. Press F1 to toggle debug window.", IDC_DETAILS, 7, 127, 210, 17
 END
 
 STRINGTABLE
@@ -86,6 +89,7 @@ BEGIN
                   "If you hide window for non-console application you may not be able to close it normally.\n"\
                   "In that case end its task via system Task Manager available by Ctrl+Shift+Esc hotkey.\n\n"\
                   "Are you sure you want to enable this feature?\n"
+
   // ToolTipText (80 chars max: 79 + null)
   IDS_TTT_CHANNEL "Enter Twitch.tv link or channel name here"
   IDS_TTT_PUT_LNK "Put text from the clipboard"
@@ -96,5 +100,6 @@ BEGIN
   IDS_TTT_PL_LINE "Commandline for custom video player (stream URL will be added as last argument)"
   IDS_TTT_PL_BRWS "Browse for custom video player executable file"
   IDS_TTT_PL_HIDE "Hides custom player console window (usually first window)"
+  IDS_TTT_LOGINFO "Debug log information window"
   IDS_TTT_SITELNK "Visit developer homepage"
 END
