--- a/resource/TwitchXP.rc
+++ b/resource/TwitchXP.rc
@@ -12,14 +12,21 @@
 IDI_ICN ICON "TwitchXP.ico"
 1 24 "Manifest.xml"
 
+#define STRINGIFY(x) #x
+#define TOSTRING(x) STRINGIFY(x)
+
+#define VER_MAJOR 1
+#define VER_MINOR 9
+#define LAST_YEAR 2024
+
 #define R_CAPTION "TwitchXP"
-#define R_VERSION "1.8"
+#define R_VERSION TOSTRING(VER_MAJOR) "." TOSTRING(VER_MINOR)
 #define R_INTNAME "TwitchXP"
-#define R_COPYEAR "\xA9 SysTools 2018-2023"
+#define R_COPYEAR "\xA9 SysTools 2018-" TOSTRING(LAST_YEAR)
 
 1 VERSIONINFO
-FILEVERSION 1,8,0,0
-PRODUCTVERSION 1,8,0,0
+FILEVERSION VER_MAJOR,VER_MINOR,0,0
+PRODUCTVERSION VER_MAJOR,VER_MINOR,0,0
 FILETYPE 1
 BEGIN
   BLOCK "StringFileInfo"
